tests/ui/non_mod_in_mod.rs
#[nanopass::langs]
mod foo {
    struct Bar;
    struct Baz;
}

fn main() {}
